<resources>
    <string name="app_name">Swoosh</string>
    <string name="background_image">background image</string>
    <string name="app_logo">app logo</string>
    <string name="desired_league">Desired League</string>
    <string name="mens">Mens</string>
    <string name="womens">Womens</string>
    <string name="co_ed">Co-Ed</string>
    <string name="next">NEXT</string>
    <string name="give_your_all">GIVE YOUR ALL</string>
    <string name="go_all_out">GO ALL OUT</string>
    <string name="find_team_in_your_city_and_dominate_the_league">Find team in your city and dominate the league</string>
    <string name="get_started">GET STARTED</string>
    <string name="i_am_a">i_am_a</string>
    <string name="beginner">BEGINNER</string>
    <string name="baller">BALLER</string>
    <string name="finish">FINISH</string>
    <string name="search_league">TextView</string>
</resources>